--- a/docker/app/Dockerfile.dev
+++ b/docker/app/Dockerfile.dev
@@ -1,3 +1,9 @@
-FROM ruby:3
+FROM mcr.microsoft.com/devcontainers/ruby:3-bullseye
 
-RUN gem update --system && gem install solargraph rails
+USER $USERNAME
+RUN gem update --system && gem install solargraph rails foreman
+RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.bash_history" \
+    && mkdir /commandhistory \
+    && touch /commandhistory/.bash_history \
+    && chown -R 1000:1000 /commandhistory \
+    && echo "$SNIPPET" >> "/home/$USERNAME/.bashrc"
