--- a/docker/app/Dockerfile.dev
+++ b/docker/app/Dockerfile.dev
@@ -1,9 +1,18 @@
 FROM mcr.microsoft.com/devcontainers/ruby:3-bullseye
 
-USER $USERNAME
+WORKDIR /app
 RUN gem update --system && gem install solargraph rails foreman
+
+# For saving bash history
 RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.bash_history" \
     && mkdir /commandhistory \
     && touch /commandhistory/.bash_history \
     && chown -R 1000:1000 /commandhistory \
     && echo "$SNIPPET" >> "/home/$USERNAME/.bashrc"
+
+# Add vendor dir
+RUN mkdir vendor \
+    && mkdir vendor/bundle \
+    && chown -R 1000:1000 .
+
+CMD ["rails", "server", "-b", "0.0.0.0"]
