--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"aki77.rails-db-schema",
-				"castwide.solargraph",
+				"shopify.ruby-lsp",
 				"kaiwood.endwise",
 				"koichisasada.vscode-rdbg",
 				"rebornix.ruby",
