--- a/docker/app/Dockerfile.dev
+++ b/docker/app/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/ruby:3-bullseye
+FROM mcr.microsoft.com/devcontainers/ruby:1-3.3-bullseye
 
 WORKDIR /app
 RUN gem update --system && gem install rails foreman ruby-lsp
