--- a/docker/app/Dockerfile.dev
+++ b/docker/app/Dockerfile.dev
@@ -1,13 +1,13 @@
-FROM mcr.microsoft.com/devcontainers/ruby:1-3.3-bullseye
+FROM mcr.microsoft.com/devcontainers/ruby:3.3
 
 WORKDIR /app
 RUN gem update --system && gem install rails foreman ruby-lsp
 
-# For saving bash history
-RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.bash_history" \
-    && mkdir /commandhistory \
-    && touch /commandhistory/.bash_history \
+# For saving zsh history
+RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.zsh_history" \
+    && mkdir -p /commandhistory \
+    && touch /commandhistory/.zsh_history \
     && chown -R 1000:1000 /commandhistory \
-    && echo "$SNIPPET" >> "/home/$USERNAME/.bashrc"
+    && echo "$SNIPPET" >> "/home/$USERNAME/.zshrc"
 
 CMD ["rails", "server", "-b", "0.0.0.0"]
