--- a/docker/app/Dockerfile.dev
+++ b/docker/app/Dockerfile.dev
@@ -3,11 +3,16 @@ FROM mcr.microsoft.com/devcontainers/ruby:3.3
 WORKDIR /app
 RUN gem update --system && gem install rails foreman ruby-lsp
 
+# Install zsh-autosuggestions
+RUN mkdir -p /home/vscode/.zsh \
+    && git clone https://github.com/zsh-users/zsh-autosuggestions /home/vscode/.zsh/zsh-autosuggestions \
+    && echo "source /home/vscode/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh" >> /home/vscode/.zshrc
+
 # For saving zsh history
 RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.zsh_history" \
     && mkdir -p /commandhistory \
     && touch /commandhistory/.zsh_history \
     && chown -R 1000:1000 /commandhistory \
-    && echo "$SNIPPET" >> "/home/$USERNAME/.zshrc"
+    && echo "$SNIPPET" >> "/home/vscode/.zshrc"
 
 CMD ["rails", "server", "-b", "0.0.0.0"]
