feat(vscode): update launch configuration for Rails development

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,11 @@
 	],
 	"service": "app",
 	"workspaceFolder": "/app",
+	"remoteUser": "vscode",
+	"updateRemoteUserUID": true,
+	"settings": {
+		"terminal.integrated.defaultProfile.linux": "zsh"
+	},
 	"customizations": {
 		"vscode": {
 			"extensions": [
