--- a/docker/app/Dockerfile.dev
+++ b/docker/app/Dockerfile.dev
@@ -6,13 +6,16 @@ RUN gem update --system && gem install rails foreman ruby-lsp
 # Install zsh-autosuggestions
 RUN mkdir -p /home/vscode/.zsh \
     && git clone https://github.com/zsh-users/zsh-autosuggestions /home/vscode/.zsh/zsh-autosuggestions \
-    && echo "source /home/vscode/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh" >> /home/vscode/.zshrc
+    && echo "source /home/vscode/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh" >> /home/vscode/.zshrc \
+    && chown -R vscode:vscode /home/vscode/.zsh \
+    && chown vscode:vscode /home/vscode/.zshrc
 
 # For saving zsh history
 RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.zsh_history" \
     && mkdir -p /commandhistory \
     && touch /commandhistory/.zsh_history \
-    && chown -R 1000:1000 /commandhistory \
-    && echo "$SNIPPET" >> "/home/vscode/.zshrc"
+    && chown -R vscode:vscode /commandhistory \
+    && echo "$SNIPPET" >> "/home/vscode/.zshrc" \
+    && chown vscode:vscode /home/vscode/.zshrc
 
 CMD ["rails", "server", "-b", "0.0.0.0"]
