--- a/docker/app/Dockerfile.dev
+++ b/docker/app/Dockerfile.dev
@@ -1,21 +1,33 @@
 FROM mcr.microsoft.com/devcontainers/ruby:3.3
 
 WORKDIR /app
-RUN gem update --system && gem install rails foreman ruby-lsp
 
-# Install zsh-autosuggestions
-RUN mkdir -p /home/vscode/.zsh \
-    && git clone https://github.com/zsh-users/zsh-autosuggestions /home/vscode/.zsh/zsh-autosuggestions \
-    && echo "source /home/vscode/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh" >> /home/vscode/.zshrc \
-    && chown -R vscode:vscode /home/vscode/.zsh \
-    && chown vscode:vscode /home/vscode/.zshrc
+# システムパッケージのアップデートを追加
+RUN apt-get update && apt-get install -y \
+    vim \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-# For saving zsh history
-RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.zsh_history" \
-    && mkdir -p /commandhistory \
-    && touch /commandhistory/.zsh_history \
-    && chown -R vscode:vscode /commandhistory \
-    && echo "$SNIPPET" >> "/home/vscode/.zshrc" \
-    && chown vscode:vscode /home/vscode/.zshrc
+# Rubyのセットアップをまとめる
+RUN gem update --system && \
+    gem install bundler rails foreman ruby-lsp solargraph
+
+# zshの設定を改善
+RUN mkdir -p /home/vscode/.zsh && \
+    git clone https://github.com/zsh-users/zsh-autosuggestions /home/vscode/.zsh/zsh-autosuggestions && \
+    git clone https://github.com/zsh-users/zsh-syntax-highlighting /home/vscode/.zsh/zsh-syntax-highlighting && \
+    echo "source /home/vscode/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh" >> /home/vscode/.zshrc && \
+    echo "source /home/vscode/.zsh/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh" >> /home/vscode/.zshrc && \
+    echo "export HISTSIZE=10000" >> /home/vscode/.zshrc && \
+    echo "export SAVEHIST=10000" >> /home/vscode/.zshrc && \
+    echo "setopt share_history" >> /home/vscode/.zshrc && \
+    chown -R vscode:vscode /home/vscode/.zsh && \
+    chown vscode:vscode /home/vscode/.zshrc
+
+# zsh履歴の設定
+RUN mkdir -p /commandhistory && \
+    touch /commandhistory/.zsh_history && \
+    echo 'export HISTFILE=/commandhistory/.zsh_history' >> /home/vscode/.zshrc && \
+    chown -R vscode:vscode /commandhistory
 
 CMD ["rails", "server", "-b", "0.0.0.0"]
