feat(devcontainer): add support for API and fullstack Rails development modes
- Update docker-compose.yml to support RAILS_MODE environment variable
- Add DevContainer configuration for API mode
- Add DevContainer configuration for fullstack mode

--- a/.devcontainer/devcontainer.api.json
+++ b/.devcontainer/devcontainer.api.json
@@ -1,5 +1,5 @@
 {
-	"name": "Rails App",
+	"name": "Rails API App",
 	"dockerComposeFile": [
 		"../docker-compose.yml"
 	],
@@ -23,4 +23,4 @@
 			]
 		}
 	}
-}
+} 
