refactor(devcontainer): Zshプラグインの管理をdevcontainer.jsonに移行
開発コンテナの設定を簡素化し、Zshプラグイン（zsh-autosuggestions、zsh-syntax-highlighting）の管理をDockerfileからdevcontainer.jsonに移動しました。

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,5 +22,13 @@
 				"redhat.vscode-yaml"
 			]
 		}
+	},
+	"features": {
+		"ghcr.io/devcontainers-extra/features/zsh-plugins:0": {
+			"plugins": [
+				"zsh-autosuggestions",
+				"zsh-syntax-highlighting"
+			]
+		}
 	}
 }
