--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,16 +10,25 @@
 	"remoteEnv": {
 		"RAILS_MODE": "api"
 	},
-	"settings": {
-		"terminal.integrated.defaultProfile.linux": "zsh"
-	},
 	"customizations": {
 		"vscode": {
+			"settings": {
+				"terminal.integrated.defaultProfile.linux": "zsh",
+				"editor.formatOnSave": true,
+				"editor.codeActionsOnSave": {
+					"source.fixAll": "explicit",
+					"source.organizeImports": "explicit"
+				}
+			},
 			"extensions": [
 				"aki77.rails-db-schema",
 				"shopify.ruby-lsp",
 				"kaiwood.endwise",
-				"redhat.vscode-yaml"
+				"redhat.vscode-yaml",
+				"github.vscode-github-actions",
+				"github.copilot",
+				"github.copilot-chat",
+				"eamodio.gitlens"
 			]
 		}
 	},
